influxdb/influxdb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    io.kompose.service: influxdb
  name: influxdb
  namespace: homeautomation
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: influxdb
    spec:
       containers:
       - name: influxdb
         image: influxdb
         ports:
         - containerPort: 8086
         resources: {}
         volumeMounts:
         - mountPath: /var/lib/influxdb
           name: fluxconfig 
       volumes:
       - name: fluxconfig
         nfs:
           server: 192.168.178.33
           path: "/volume1/influxdb/"
status: {}
