influxdb/influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: influxdb
  name: influxdb
  namespace: homeautomation
spec:
  ports:
  - name: "8086"
    port: 8086
    targetPort: 8086
  - name: "8083"
    port: 8083
    targetPort: 8083
  selector:
    io.kompose.service: influxdb
status:
  loadBalancer: {}
