influxdb/influxdb-ingress-external.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: influxdb-external
  namespace: homeautomation
  labels:
    traffic-type: external
  annotations:
    traefik.frontend.rule.type: PathPrefix
    #traefik.frontend.redirect.regex: ^http://(.*)
    #traefik.frontend.redirect.replacement: https://$1
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: influxdb-auth
spec:
  rules:
  - host: influxdb.cloud.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: influxdb
          servicePort: 8086
      - path: /admin
        backend:
          serviceName: influxdb
          servicePort: 8083
